# cpp_app_template

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
configured/: config.h.in
src/: CMakeLists.txt  library.cpp
tests/: CMakeLists.txt  library.cpp
